added more flexiility to excomets free spectrum notebook

--- a/notebooks/load_the_data.ipynb
+++ b/notebooks/load_the_data.ipynb
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "167bdb0b",
    "metadata": {},
    "outputs": [
@@ -134,40 +134,33 @@
      "text": [
       "Data used for this analysis:\n",
       "\n",
-      " data/2017-08-04/\n",
-      "\tAVM shift: 0.0\" \tEXP: 526s, \tDate: 2017-08-04, Time: 14:31:03 UTC\n",
-      "\tAVM shift: 0.0\" \tEXP: 526s, \tDate: 2017-08-04, Time: 14:43:00 UTC\n",
-      "\tAVM shift: 0.0\" \tEXP: 526s, \tDate: 2017-08-04, Time: 14:54:57 UTC\n",
-      "\tAVM shift: 0.0\" \tEXP: 526s, \tDate: 2017-08-04, Time: 15:06:54 UTC\n",
-      "\tAVM shift: -1.1\" \tEXP: 664s, \tDate: 2017-08-04, Time: 15:57:36 UTC\n",
-      "\tAVM shift: -1.1\" \tEXP: 664s, \tDate: 2017-08-04, Time: 16:11:13 UTC\n",
-      "\tAVM shift: -1.1\" \tEXP: 664s, \tDate: 2017-08-04, Time: 16:24:50 UTC\n",
-      "\tAVM shift: -1.1\" \tEXP: 664s, \tDate: 2017-08-04, Time: 16:38:27 UTC\n",
-      "\tAVM shift: 1.1\" \tEXP: 664s, \tDate: 2017-08-04, Time: 17:32:52 UTC\n",
-      "\tAVM shift: 1.1\" \tEXP: 664s, \tDate: 2017-08-04, Time: 17:46:29 UTC\n",
-      "\tAVM shift: 1.1\" \tEXP: 664s, \tDate: 2017-08-04, Time: 18:00:06 UTC\n",
-      "\tAVM shift: 1.1\" \tEXP: 664s, \tDate: 2017-08-04, Time: 18:13:43 UTC\n",
+      " data/2017-04-23/\n",
+      "\tAVM shift: 0.0\" \tEXP: 526s, \tDate: 2017-04-22, Time: 23:36:06 UTC\n",
+      "\tAVM shift: 0.0\" \tEXP: 526s, \tDate: 2017-04-22, Time: 23:48:03 UTC\n",
+      "\tAVM shift: 0.0\" \tEXP: 526s, \tDate: 2017-04-23, Time: 00:00:00 UTC\n",
+      "\tAVM shift: 0.0\" \tEXP: 526s, \tDate: 2017-04-23, Time: 00:11:57 UTC\n",
+      "\tAVM shift: -1.25\" \tEXP: 664s, \tDate: 2017-04-23, Time: 00:31:55 UTC\n",
+      "\tAVM shift: -1.25\" \tEXP: 664s, \tDate: 2017-04-23, Time: 00:45:32 UTC\n",
+      "\tAVM shift: -1.25\" \tEXP: 664s, \tDate: 2017-04-23, Time: 00:59:09 UTC\n",
+      "\tAVM shift: -1.25\" \tEXP: 664s, \tDate: 2017-04-23, Time: 01:12:46 UTC\n",
+      "\tAVM shift: 1.1\" \tEXP: 664s, \tDate: 2017-04-23, Time: 02:07:24 UTC\n",
+      "\tAVM shift: 1.1\" \tEXP: 664s, \tDate: 2017-04-23, Time: 02:21:01 UTC\n",
+      "\tAVM shift: 1.1\" \tEXP: 664s, \tDate: 2017-04-23, Time: 02:34:38 UTC\n",
+      "\tAVM shift: 1.1\" \tEXP: 664s, \tDate: 2017-04-23, Time: 02:48:15 UTC\n",
       "\n",
-      " data/2017-10-21/\n",
-      "\tAVM shift: 0.0\" \tEXP: 444s, \tDate: 2017-10-20, Time: 17:09:09 UTC\n",
-      "\tAVM shift: 0.0\" \tEXP: 444s, \tDate: 2017-10-20, Time: 16:59:03 UTC\n",
-      "\tAVM shift: 0.0\" \tEXP: 444s, \tDate: 2017-10-20, Time: 17:29:21 UTC\n",
-      "\tAVM shift: 0.0\" \tEXP: 444s, \tDate: 2017-10-20, Time: 17:19:15 UTC\n",
-      "\tAVM shift: -1.1\" \tEXP: 538s, \tDate: 2017-10-20, Time: 18:23:45 UTC\n",
-      "\tAVM shift: -1.1\" \tEXP: 538s, \tDate: 2017-10-20, Time: 18:36:03 UTC\n",
-      "\tAVM shift: -1.1\" \tEXP: 538s, \tDate: 2017-10-20, Time: 18:48:21 UTC\n",
-      "\tAVM shift: -1.1\" \tEXP: 538s, \tDate: 2017-10-20, Time: 19:00:39 UTC\n",
-      "\tAVM shift: 1.1\" \tEXP: 538s, \tDate: 2017-10-20, Time: 19:59:06 UTC\n",
-      "\tAVM shift: 1.1\" \tEXP: 538s, \tDate: 2017-10-20, Time: 20:23:42 UTC\n",
-      "\tAVM shift: 1.1\" \tEXP: 538s, \tDate: 2017-10-20, Time: 20:11:24 UTC\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/usr/lib/python3.10/site-packages/numpy/lib/npyio.py:719: VisibleDeprecationWarning: Creating an ndarray from ragged nested sequences (which is a list-or-tuple of lists-or-tuples-or ndarrays with different lengths or shapes) is deprecated. If you meant to do this, you must specify 'dtype=object' when creating the ndarray.\n",
-      "  val = np.asanyarray(val)\n"
+      " data/2017-06-10/\n",
+      "\tAVM shift: 0.0\" \tEXP: 526s, \tDate: 2017-06-10, Time: 20:02:24 UTC\n",
+      "\tAVM shift: 0.0\" \tEXP: 526s, \tDate: 2017-06-10, Time: 20:14:21 UTC\n",
+      "\tAVM shift: 0.0\" \tEXP: 526s, \tDate: 2017-06-10, Time: 20:26:18 UTC\n",
+      "\tAVM shift: 0.0\" \tEXP: 526s, \tDate: 2017-06-10, Time: 20:38:15 UTC\n",
+      "\tAVM shift: -1.1\" \tEXP: 664s, \tDate: 2017-06-10, Time: 21:29:04 UTC\n",
+      "\tAVM shift: -1.1\" \tEXP: 664s, \tDate: 2017-06-10, Time: 21:42:41 UTC\n",
+      "\tAVM shift: -1.1\" \tEXP: 664s, \tDate: 2017-06-10, Time: 21:56:18 UTC\n",
+      "\tAVM shift: -1.1\" \tEXP: 664s, \tDate: 2017-06-10, Time: 22:09:55 UTC\n",
+      "\tAVM shift: 1.1\" \tEXP: 664s, \tDate: 2017-06-10, Time: 23:04:21 UTC\n",
+      "\tAVM shift: 1.1\" \tEXP: 664s, \tDate: 2017-06-10, Time: 23:17:58 UTC\n",
+      "\tAVM shift: 1.1\" \tEXP: 664s, \tDate: 2017-06-10, Time: 23:31:35 UTC\n",
+      "\tAVM shift: 1.1\" \tEXP: 664s, \tDate: 2017-06-10, Time: 23:45:12 UTC\n"
      ]
     }
    ],
@@ -177,8 +170,13 @@
     "print(\"Data used for this analysis:\")\n",
     "\n",
     "for i in sorted(datadirs):\n",
-    "    print(\"\\n\",datadirs[i])\n",
-    "    D.append(c.GetData(param, home+'/'+datadirs[i]))\n",
+    "    if param[\"filenames\"][\"split_files\"] == 'yes':\n",
+    "        if datadirs[i][5:-1] in [\"2017-04-23\",\"2017-06-10\",\"2017-08-04\",\"2017-10-21\",\"2017-11-26\",\"2018-03-17\",\"2018-05-09\"]:\n",
+    "            print(\"\\n\",datadirs[i])\n",
+    "            D.append(c.GetData(param, home+'/'+datadirs[i]))\n",
+    "    else:\n",
+    "        print(\"\\n\",datadirs[i][5:-1])\n",
+    "        D.append(c.GetData(param, home+'/'+datadirs[i]))\n",
     "    \n",
     "# We save the data\n",
     "np.savez(home+'/data/D_'+part+'.npz', D, dtype=object)"
@@ -194,250 +192,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "b720675e",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "\n",
-      "Normalising the spectra relative to first spectrum...\n",
-      "Done\n",
-      "\n",
-      "\n",
-      "\n",
-      "\u001b[34mShifting the 1st observation:\u001b[0m\n",
-      "\n",
-      "\n",
-      "Observations done at: 2017-08-04 14:31:03\n",
-      "______________________________________________\n",
-      "\n",
-      " Pixel shift [pix]:\t 0\n",
-      " W shift [A]:\t\t 0.0\n",
-      " RV shift [km/s]:\t 0\n",
-      "______________________________________________\n",
-      "\n",
-      "\n",
-      "Observations done at: 2017-08-04 14:43:00\n",
-      "______________________________________________\n",
-      "\n",
-      " Pixel shift [pix]:\t 2\n",
-      " W shift [A]:\t\t 0.02\n",
-      " RV shift [km/s]:\t 5\n",
-      "______________________________________________\n",
-      "\n",
-      "\n",
-      "Observations done at: 2017-08-04 14:54:57\n",
-      "______________________________________________\n",
-      "\n",
-      " Pixel shift [pix]:\t 5\n",
-      " W shift [A]:\t\t 0.05\n",
-      " RV shift [km/s]:\t 12\n",
-      "______________________________________________\n",
-      "\n",
-      "\n",
-      "Observations done at: 2017-08-04 15:06:54\n",
-      "______________________________________________\n",
-      "\n",
-      " Pixel shift [pix]:\t -3\n",
-      " W shift [A]:\t\t -0.03\n",
-      " RV shift [km/s]:\t -7\n",
-      "______________________________________________\n",
-      "\n",
-      "\n",
-      "Observations done at: 2017-08-04 15:57:36\n",
-      "______________________________________________\n",
-      "\n",
-      " Pixel shift [pix]:\t 45\n",
-      " W shift [A]:\t\t 0.45\n",
-      " RV shift [km/s]:\t 107\n",
-      "______________________________________________\n",
-      "\n",
-      "\n",
-      "Observations done at: 2017-08-04 16:11:13\n",
-      "______________________________________________\n",
-      "\n",
-      " Pixel shift [pix]:\t 51\n",
-      " W shift [A]:\t\t 0.51\n",
-      " RV shift [km/s]:\t 122\n",
-      "______________________________________________\n",
-      "\n",
-      "\n",
-      "Observations done at: 2017-08-04 16:24:50\n",
-      "______________________________________________\n",
-      "\n",
-      " Pixel shift [pix]:\t 49\n",
-      " W shift [A]:\t\t 0.49\n",
-      " RV shift [km/s]:\t 117\n",
-      "______________________________________________\n",
-      "\n",
-      "\n",
-      "Observations done at: 2017-08-04 16:38:27\n",
-      "______________________________________________\n",
-      "\n",
-      " Pixel shift [pix]:\t 50\n",
-      " W shift [A]:\t\t 0.5\n",
-      " RV shift [km/s]:\t 119\n",
-      "______________________________________________\n",
-      "\n",
-      "\n",
-      "Observations done at: 2017-08-04 17:32:52\n",
-      "______________________________________________\n",
-      "\n",
-      " Pixel shift [pix]:\t -42\n",
-      " W shift [A]:\t\t -0.42\n",
-      " RV shift [km/s]:\t -100\n",
-      "______________________________________________\n",
-      "\n",
-      "\n",
-      "Observations done at: 2017-08-04 17:46:29\n",
-      "______________________________________________\n",
-      "\n",
-      " Pixel shift [pix]:\t -37\n",
-      " W shift [A]:\t\t -0.37\n",
-      " RV shift [km/s]:\t -88\n",
-      "______________________________________________\n",
-      "\n",
-      "\n",
-      "Observations done at: 2017-08-04 18:00:06\n",
-      "______________________________________________\n",
-      "\n",
-      " Pixel shift [pix]:\t -45\n",
-      " W shift [A]:\t\t -0.45\n",
-      " RV shift [km/s]:\t -107\n",
-      "______________________________________________\n",
-      "\n",
-      "\n",
-      "Observations done at: 2017-08-04 18:13:43\n",
-      "______________________________________________\n",
-      "\n",
-      " Pixel shift [pix]:\t -43\n",
-      " W shift [A]:\t\t -0.43\n",
-      " RV shift [km/s]:\t -103\n",
-      "______________________________________________\n",
-      "\n",
-      "\n",
-      "\n",
-      "\u001b[34mShifting the 2nd observation:\u001b[0m\n",
-      "\n",
-      "\n",
-      "Observations done at: 2017-10-20 16:59:03\n",
-      "______________________________________________\n",
-      "\n",
-      " Pixel shift [pix]:\t -2\n",
-      " W shift [A]:\t\t -0.02\n",
-      " RV shift [km/s]:\t -5\n",
-      "______________________________________________\n",
-      "\n",
-      "\n",
-      "Observations done at: 2017-10-20 17:09:09\n",
-      "______________________________________________\n",
-      "\n",
-      " Pixel shift [pix]:\t 1\n",
-      " W shift [A]:\t\t 0.01\n",
-      " RV shift [km/s]:\t 2\n",
-      "______________________________________________\n",
-      "\n",
-      "\n",
-      "Observations done at: 2017-10-20 17:19:15\n",
-      "______________________________________________\n",
-      "\n",
-      " Pixel shift [pix]:\t 2\n",
-      " W shift [A]:\t\t 0.02\n",
-      " RV shift [km/s]:\t 5\n",
-      "______________________________________________\n",
-      "\n",
-      "\n",
-      "Observations done at: 2017-10-20 17:29:21\n",
-      "______________________________________________\n",
-      "\n",
-      " Pixel shift [pix]:\t -4\n",
-      " W shift [A]:\t\t -0.04\n",
-      " RV shift [km/s]:\t -10\n",
-      "______________________________________________\n",
-      "\n",
-      "\n",
-      "Observations done at: 2017-10-20 18:23:45\n",
-      "______________________________________________\n",
-      "\n",
-      " Pixel shift [pix]:\t 83\n",
-      " W shift [A]:\t\t 0.83\n",
-      " RV shift [km/s]:\t 198\n",
-      "______________________________________________\n",
-      "\n",
-      "\n",
-      "Observations done at: 2017-10-20 18:36:03\n",
-      "______________________________________________\n",
-      "\n",
-      " Pixel shift [pix]:\t 79\n",
-      " W shift [A]:\t\t 0.79\n",
-      " RV shift [km/s]:\t 189\n",
-      "______________________________________________\n",
-      "\n",
-      "\n",
-      "Observations done at: 2017-10-20 18:48:21\n",
-      "______________________________________________\n",
-      "\n",
-      " Pixel shift [pix]:\t 83\n",
-      " W shift [A]:\t\t 0.83\n",
-      " RV shift [km/s]:\t 198\n",
-      "______________________________________________\n",
-      "\n",
-      "\n",
-      "Observations done at: 2017-10-20 19:00:39\n",
-      "______________________________________________\n",
-      "\n",
-      " Pixel shift [pix]:\t 77\n",
-      " W shift [A]:\t\t 0.77\n",
-      " RV shift [km/s]:\t 184\n",
-      "______________________________________________\n",
-      "\n",
-      "\n",
-      "Observations done at: 2017-10-20 19:59:06\n",
-      "______________________________________________\n",
-      "\n",
-      " Pixel shift [pix]:\t -44\n",
-      " W shift [A]:\t\t -0.44\n",
-      " RV shift [km/s]:\t -105\n",
-      "______________________________________________\n",
-      "\n",
-      "\n",
-      "Observations done at: 2017-10-20 20:11:24\n",
-      "______________________________________________\n",
-      "\n",
-      " Pixel shift [pix]:\t -45\n",
-      " W shift [A]:\t\t -0.45\n",
-      " RV shift [km/s]:\t -107\n",
-      "______________________________________________\n",
-      "\n",
-      "\n",
-      "Observations done at: 2017-10-20 20:23:42\n",
-      "______________________________________________\n",
-      "\n",
-      " Pixel shift [pix]:\t -47\n",
-      " W shift [A]:\t\t -0.47\n",
-      " RV shift [km/s]:\t -112\n",
-      "______________________________________________\n",
-      "\n",
-      "\n",
-      "Normalising the spectra relative to first spectrum...\n",
-      "Done\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/pas/science/exocomets/src/calculations.py:292: VisibleDeprecationWarning: Creating an ndarray from ragged nested sequences (which is a list-or-tuple of lists-or-tuples-or ndarrays with different lengths or shapes) is deprecated. If you meant to do this, you must specify 'dtype=object' when creating the ndarray.\n",
-      "  return np.array(Dn)\n",
-      "/home/pas/science/exocomets/src/calculations.py:247: VisibleDeprecationWarning: Creating an ndarray from ragged nested sequences (which is a list-or-tuple of lists-or-tuples-or ndarrays with different lengths or shapes) is deprecated. If you meant to do this, you must specify 'dtype=object' when creating the ndarray.\n",
-      "  return np.array(Ds)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Load the data into the multidimentional array D\n",
     "D = c.LoadData(home+'/data/D_'+part+'.npz')\n",
@@ -454,6 +212,14 @@
     "# We save the normalised and shifted data\n",
     "np.savez(home+'/data/Dnsn_'+part+'.npz', Dns, dtype=object)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bd18fc79",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
