--- a/notebooks/transit_duration.ipynb
+++ b/notebooks/transit_duration.ipynb
@@ -10,6 +10,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "23be62e3",
+   "metadata": {},
+   "source": [
+    "In this notebook we calculate an estimate for the maximum duration of transit."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "155284be",
    "metadata": {},
    "source": [
@@ -26,15 +34,23 @@
   },
   {
    "cell_type": "markdown",
+   "id": "a858d163",
+   "metadata": {},
+   "source": [
+    "where $\\Delta T$ is the maximum transit duration, $R_*$ the radius of the star, $q$ the periastron distance and $dv_r/dt$ the acceleration."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "056b3cfd",
    "metadata": {},
    "source": [
-    "We use the results from the 2018-03-17 data to calculate the transit duration."
+    "We use the results from the 2018-03-17 data (distance from comet to star and acceleration) to calculate the maximum transit duration."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 6,
    "id": "c4938b21",
    "metadata": {},
    "outputs": [],
@@ -44,16 +60,17 @@
     "from astropy import constants as const\n",
     "\n",
     "def w_ave(x, xerr):\n",
+    "    # Given an array of values and corresponding uncertainty\n",
+    "    # we can use this function to calculate the weighted average.\n",
     "    weights = 1./(xerr**2)\n",
     "    w_ave   = np.average(x, axis=0, weights=weights)\n",
     "    uncertainty = 1/np.sum(weights)*np.sqrt(np.sum((weights*xerr)**2))\n",
-    "    return w_ave, uncertainty\n",
-    "    "
+    "    return w_ave, uncertainty"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 7,
    "id": "bc7a6eb5",
    "metadata": {},
    "outputs": [
@@ -61,20 +78,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Distance from star: 7.6 ± 2.3 R*\n",
-      "Confidence: 3.3 sigma\n",
+      "Distance from star: 7.6 ± 1.7 R*\n",
+      "Confidence: 4.4 sigma\n",
       "\n",
-      "Acceleration: 2.2 ± 0.7 m/s^2\n",
-      "Confidence: 3.2 sigma\n"
+      "Acceleration: 2.4 ± 0.6 m/s^2\n",
+      "Confidence: 4.3 sigma\n"
      ]
     }
    ],
    "source": [
-    "dist        = np.array([9.0,7.1])\n",
-    "dist_err    = np.array([4.3,2.7])\n",
+    "dist        = np.array([8.3,7.1])\n",
+    "dist_err    = np.array([2.8,2.2])\n",
     "\n",
-    "dvdt        = np.array([1.8,2.9])\n",
-    "dvdt_err    = np.array([0.9,1.1])\n",
+    "dvdt        = np.array([2.1,2.9])\n",
+    "dvdt_err    = np.array([0.7,0.9])\n",
     "\n",
     "dist_w_ave, dist_uncertainty = w_ave(dist, dist_err)\n",
     "dvdt_w_ave, dvdt_uncertainty = w_ave(dvdt, dvdt_err)\n",
@@ -88,19 +105,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 8,
    "id": "dd58a277",
    "metadata": {},
    "outputs": [],
    "source": [
-    "R = 1.8*const.R_sun\n",
-    "q = dist_w_ave*R\n",
+    "R = 1.8*const.R_sun # The radius of beta Pic\n",
+    "q = dist_w_ave*R #\n",
     "dvdt = dvdt_w_ave*u.meter/u.second**2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 9,
    "id": "80b538ae",
    "metadata": {},
    "outputs": [
@@ -108,7 +125,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Maximum transit duration: 3.4 ± 0.3 hours\n"
+      "Maximum transit duration: 3.3 ± 0.2 hours\n"
      ]
     }
    ],
@@ -123,16 +140,8 @@
    "id": "9eed79d8",
    "metadata": {},
    "source": [
-    "A exocometary feature is first seen at 04:37:42 and lasting until the end of observations at 07:48:43. A difference of 3 h 11 min. We estimate that the transit duration should at most last 3 h 24 min. It is such a shame we were not able to observe for another 30 min to an hour. We could have caught the end of the transit perhaps!"
+    "A exocometary feature is first seen at 04:37:42 and lasting until the end of observations at 07:48:43. A difference of 3 h 11 min. We estimate that the transit duration should at most last ~ 3 h 12 min. It is such a shame we were not able to observe for another 30 min to an hour. We may have caught the end of the transit perhaps!"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2bb1b1bd",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
