Added more comments to the notebook

--- a/notebooks/load_the_data.ipynb
+++ b/notebooks/load_the_data.ipynb
@@ -21,7 +21,7 @@
    "id": "3649c48a",
    "metadata": {},
    "source": [
-    "This workbook takes the HST fits files and creates numpy arrays of shifted and normalised data."
+    "This workbook takes the HST fits files and creates numpy arrays of shifted and normalised data. It then looks at how accurately the alignment was done. The bottom part of this notebook will have "
    ]
   },
   {
@@ -1097,15 +1097,10 @@
     "# Shift the data relative to the first spectrum of each visit\n",
     "Dns = c.ShiftSpec(param, Dn)\n",
     "\n",
-    "#Dnsn = c.ShiftSpec(param, Dns)\n",
-    "\n",
     "# Re normalise the data\n",
     "Dnsn = c.NormSpec(param, Dns)\n",
     "\n",
     "# We save the normalised and shifted data\n",
-    "\n",
-    "\n",
-    "# We save the data\n",
     "if param[\"filenames\"][\"split_files\"] == \"yes\":\n",
     "    np.savez(home+'/data/Dnsn_'+part+'_split.npz', Dnsn, dtype=object)\n",
     "else:\n",
@@ -1131,6 +1126,22 @@
     "                   'text.usetex': True}\n",
     "\n",
     "plt.rcParams.update(plotting_params)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3dcbb87f",
+   "metadata": {},
+   "source": [
+    "### Let us have a quick look at how well the alignment worked"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fc6ec1e1",
+   "metadata": {},
+   "source": [
+    "We do this by fitting a Gaussian to the non-variable CO line and measure the lateral movement."
    ]
   },
   {
@@ -1180,7 +1191,6 @@
     "    for j in range(len(Dnsn[i])):   # Cycle over number of fits files each visit\n",
     "        spec.append(Dnsn[i][j][1])\n",
     "        minimums.append((w[s1:s2][np.argmin(Dnsn[i][j][1][s1:s2])]))\n",
-    "        #print(minimums[i])\n",
     "\n",
     "spec = np.array(spec)\n",
     "\n",
@@ -1200,7 +1210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "id": "a814f666",
    "metadata": {},
    "outputs": [
@@ -1208,7 +1218,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.12168036902271472\n"
+      "The standard deviation of the lateral shifts (in Ångstrøm): 0.12168036902271472\n"
      ]
     },
     {
@@ -1217,7 +1227,7 @@
        "Text(0, 0.5, 'Wavelength shift')"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1238,7 +1248,7 @@
     "lateral = np.array(lateral)\n",
     "lateral = lateral - np.median(lateral)\n",
     "\n",
-    "print(np.std(lateral))\n",
+    "print(\"The standard deviation of the lateral shifts (in Ångstrøm):\",np.std(lateral))\n",
     "\n",
     "fig = plt.figure(figsize=(10.0,6.0))\n",
     "plt.scatter(np.arange(len(lateral)),lateral)\n",
@@ -1300,8 +1310,7 @@
     "\n",
     "fig = plt.figure(figsize=(16.0,10.0))\n",
     "plt.imshow(S,cmap=cmap,extent=[w_c[0],w_c[-1],0,len(spec_c)],interpolation='none',aspect='auto')\n",
-    "plt.xlabel(r'Wavelength [\\AA]')\n",
-    "#plt.xlim(1390,1396)"
+    "plt.xlabel(r'Wavelength [\\AA]')"
    ]
   }
  ],
